Webui: make the cookies list a little shorter, to make it fit on more screens without scrolling. (A better solution in the future would be to size it based on the window height.) BUG=75678 TEST=cookies list doesn't have two scrollbars in chromeos or other short windows Review URL: http://codereview.chromium.org/6674038
git-svn-id: svn://svn.chromium.org/chrome/trunk/src@78427 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: d9a749a5a13a338b799aee241905a4ab557ec80c

--- a/chrome/browser/resources/options/cookies_view.css
+++ b/chrome/browser/resources/options/cookies_view.css
@@ -44,7 +44,7 @@ html[dir=rtl] #remove-all-cookies-search-column {
   /* it would be nice if we could make this expand as necessary up to the height
    * of the window, but the panel doesn't have a known height and that would
    * probably confuse cr.ui.List (which doesn't expect that) anyway */
-  height: 700px;
+  height: 600px;
   margin: 0;
 }
 
